--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-backports-modules-2.6.24 (2.6.24-22.29) hardy-security; urgency=low
+
+  * ABI bump to -22
+
+ -- Stefan Bader <stefan.bader@canonical.com>  Thu, 20 Nov 2008 11:24:32 +0100
+
 linux-backports-modules-2.6.24 (2.6.24-21.27) hardy-proposed; urgency=low
 
   [Tim Gardner]
