--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,15 @@
+linux-meta (2.6.24.22.24) hardy-security; urgency=low
+
+  * ABI bump to -22 by security update.
+
+ -- Stefan Bader <stefan.bader@canonical.com>  Mon, 24 Nov 2008 19:51:40 +0100
+
+linux-meta (2.6.24.21.23) hardy-proposed; urgency=low
+
+  * ABI bump to -21
+
+ -- Tim Gardner <tim.gardner@canonical.com>  Thu, 14 Aug 2008 09:00:08 -0600
+
 linux-meta (2.6.24.20.22) hardy-proposed; urgency=low
 
   * ABI bump to -20
