--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+linux-backports-modules-2.6.27 (2.6.27-11.10) intrepid-proposed; urgency=low
+
+  [Tim Gardner]
+
+  * Updated to master-2008-12-17
+    - LP: #293217
+  * Fix firmware naming issues caused by upstream wireless-testing.
+  * Updated iwl 3945 firmware to iwlwifi-3945-ucode-15.28.2.8.
+
+ --  Tim Gardner <tim.gardner@canonical.com>  Fri, 19 Dec 2008 08:38:37 -0700
+
 linux-backports-modules-2.6.27 (2.6.27-11.9) intrepid-proposed; urgency=low
 
   [Tim Gardner]
