--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (2.6.32.15.16) UNRELEASED; urgency=low
+
+  * drop the nouveau meta packages
+
+ -- Andy Whitcroft <apw@canonical.com>  Tue, 02 Mar 2010 11:07:13 +0000
+
 linux-meta (2.6.32.15.16) lucid; urgency=low
 
   * Lucid ABI 15
