--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (2.6.32.16.17) lucid; urgency=low
+
+  * add backport modules support for preempt flavour
+
+ -- Andy Whitcroft <apw@canonical.com>  Mon, 08 Mar 2010 19:37:42 +0000
+
 linux-meta (2.6.32.16.16) lucid; urgency=low
 
   * drop the nouveau meta packages
