maintscripts: Add maint-do-review
Signed-off-by: Stefan Bader <stefan.bader@canonical.com>

--- a/maintscripts/README
+++ b/maintscripts/README
@@ -1,10 +1,15 @@
-maint-make-bug-branch:
-	This is used to create a branch which relates to a Launchpad bug.
-	The branch is based on a version uploaded and is automtically named
-	and prepared (creating a special version in the changelog) for test
-	patch application.
 git-compare:
 	Takes a git commit (SHA1) and will display the patch and the whole
 	context of the files changed by the patch, using meld.
 git-compare-all:
 	Takes a git range and then calls git-compare:
+maint-do-review:
+	Takes a text file and a git range as arguments. Will update the text
+	file with the headers from the range and call an editor containing
+	that. Then it goes interactively and shows the patches using
+	git-compare.
+maint-make-bug-branch:
+	This is used to create a branch which relates to a Launchpad bug.
+	The branch is based on a version uploaded and is automtically named
+	and prepared (creating a special version in the changelog) for test
+	patch application.
