--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-ports-meta (2.6.32.17.12) lucid; urgency=low
+
+  * Bump ABI
+
+ -- Luke Yelavich <luke@strigy.yelavich.home>  Tue, 23 Mar 2010 21:00:36 +1100
+
 linux-ports-meta (2.6.32.16.11) lucid; urgency=low
 
   * Bump ABI
