--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (2.6.32.17.18) lucid; urgency=low
+
+  * Lucid ABI 17
+
+ -- Stefan Bader <stefan.bader@canonical.com>  Tue, 23 Mar 2010 15:34:50 +0100
+
 linux-meta (2.6.32.16.17) lucid; urgency=low
 
   * add backport modules support for preempt flavour
