--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (2.6.32.18.19) lucid; urgency=low
+
+  * Lucid ABI 18
+
+ -- Stefan Bader <stefan.bader@canonical.com>  Fri, 26 Mar 2010 19:20:34 +0100
+
 linux-meta (2.6.32.17.18) lucid; urgency=low
 
   * Lucid ABI 17
