--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-backports-modules-2.6.32 (2.6.32-19.9) lucid; urgency=low
+
+  * Lucid ABI 19
+
+ -- Andy Whitcroft <apw@canonical.com>  Thu, 01 Apr 2010 08:50:32 +0100
+
 linux-backports-modules-2.6.32 (2.6.32-18.8) lucid; urgency=low
 
   [ Stefan Bader ]
