--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-ports-meta (2.6.32.19.14) lucid; urgency=low
+
+  * Bump ABI
+
+ -- Luke Yelavich <themuso@ubuntu.com>  Mon, 05 Apr 2010 18:18:05 +1000
+
 linux-ports-meta (2.6.32.18.13) lucid; urgency=low
 
   * Bump ABI
