--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-backports-modules-3.0.0 (3.0.0-11.3) oneiric; urgency=low
+
+  * Bump ABI - Oneiric ABI 11
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Fri, 16 Sep 2011 08:22:18 -0700
+
 linux-backports-modules-3.0.0 (3.0.0-9.2) oneiric; urgency=low
 
   * Bump ABI - Oneiric ABI 9
