--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,11 @@
+linux-meta (3.0.0.12.13) oneiric; urgency=low
+
+  [ Leann Ogasawara ]
+
+  * Bump ABI 
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Fri, 23 Sep 2011 13:44:36 -0700
+
 linux-meta (3.0.0.11.12) oneiric; urgency=low
 
   [ Leann Ogasawara ]
