UBUNTU: Bump ABI
Signed-off-by: Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>

--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (2.6.38.12.27) natty-proposed; urgency=low
+
+  *
+
+ -- Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>  Tue, 27 Sep 2011 18:10:19 -0300
+
 linux-meta (2.6.38.11.26) natty-proposed; urgency=low
 
   [ Steve Conklin ]
