--- a/debian.natty/changelog
+++ b/debian.natty/changelog
@@ -1,9 +1,104 @@
-linux-lts-backport-natty (2.6.38-11.50~lucid1) lucid-proposed; urgency=low
+linux-lts-backport-natty (2.6.38-12.51~lucid1) lucid-proposed; urgency=low
 
   [Herton R. Krzesinski]
 
   * Release Tracking Bug
-    - LP: #848588
+    - LP: #862556
+
+  [ Alex Bligh ]
+
+  * SAUCE: net/netfilter/nf_conntrack_netlink.c: fix Oops on container
+    destroy
+    - LP: #843892
+
+  [ Jesse Sung ]
+
+  * SAUCE: Unregister input device only if it is registered
+    - LP: #839238
+
+  [ Leann Ogasawara ]
+
+  * SAUCE: x86: reboot: Make Dell Latitude E6220 use reboot=pci
+    - LP: #838402
+  * SAUCE: x86: reboot: Make Dell Latitude E6520 use reboot=pci
+    - LP: #833705
+
+  [ Ming Lei ]
+
+  * SAUCE: fireware: add NO_MSI quirks for o2micro controller
+    - LP: #801719
+
+  [ Stefan Bader ]
+
+  * [Config] Include all filesystem modules for virtual
+    - LP: #761809
+
+  [ Tim Gardner ]
+
+  * [Config] kernel preparation cannot be parallelized
+  * [Config] Linearize module/abi checks
+  * [Config] Linearize and simplify tree preparation rules
+  * [Config] Build kernel image in parallel with modules
+  * [Config] Set concurrency for kmake invocations
+  * [Config] Improve install-arch-headers speed
+  * [Config] Fix binary-perarch dependencies
+  * [Config] Removed stamp-flavours target
+  * [Config] Serialize binary indep targets
+  * [Config] Use build stamp directly
+  * [Config] Restore prepare-% target
+  * [Config] Fix binary-% build target
+
+  [ Upstream Kernel Changes ]
+
+  * Revert "drm/i915: disable PCH ports if needed when disabling a CRTC"
+    - LP: #814325, #838181
+  * drm/i915: restore only the mode of this driver on lastclose (v2)
+    - LP: #848687
+  * cifs: fix possible memory corruption in CIFSFindNext, CVE-2011-3191
+    - LP: #834135
+    - CVE-2011-3191
+  * befs: Validate length of long symbolic links, CVE-2011-2928
+    - LP: #834124
+    - CVE-2011-2928
+  * gro: Only reset frag0 when skb can be pulled, CVE-2011-2723
+    - LP: #844371
+    - CVE-2011-2723
+  * inet_diag: fix inet_diag_bc_audit(), CVE-2011-2213
+    - LP: #838421
+    - CVE-2011-2213
+  * si4713-i2c: avoid potential buffer overflow on si4713, CVE-2011-2700
+    - LP: #844370
+    - CVE-2011-2700
+  * Bluetooth: Prevent buffer overflow in l2cap config request,
+    CVE-2011-2497
+    - LP: #838423
+    - CVE-2011-2497
+  * crypto: Move md5_transform to lib/md5.c, CVE-2011-3188
+    - LP: #834129
+    - CVE-2011-3188
+  * net: Compute protocol sequence numbers and fragment IDs using MD5,
+    CVE-2011-3188
+    - LP: #834129
+    - CVE-2011-3188
+  * x86, intel, power: Initialize MSR_IA32_ENERGY_PERF_BIAS
+    - LP: #760131
+  * x86, intel, power: Correct the MSR_IA32_ENERGY_PERF_BIAS message
+    - LP: #760131
+  * rt2x00: Serialize TX operations on a queue.
+    - LP: #855239
+  * ext4: Fix max file size and logical block counting of extent format
+    file, CVE-2011-2695
+    - LP: #819574
+    - CVE-2011-2695
+
+ -- Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>  Thu, 29 Sep 2011 15:40:51 -0300
+
+linux (2.6.38-11.50) natty-proposed; urgency=low
+
+  [Herton R. Krzesinski]
+
+  * Release Tracking Bug
+    - LP: #848246
 
   [ Upstream Kernel Changes ]
 
@@ -12,7 +107,7 @@ linux-lts-backport-natty (2.6.38-11.50~lucid1) lucid-proposed; urgency=low
   * Revert "ath9k: use split rx buffers to get rid of order-1 skb
     allocations"
 
- -- Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>  Tue, 13 Sep 2011 17:49:18 -0300
+ -- Herton Ronaldo Krzesinski <herton.krzesinski@canonical.com>  Mon, 12 Sep 2011 17:23:38 -0300
 
 linux (2.6.38-11.49) natty-proposed; urgency=low
 
